[package]
name = "protoc-grpcio"
version = "3.0.0"
authors = ["Matt Pelland <matt@pelland.io>"]
license = "Apache-2.0"
keywords = ["compiler", "grpc", "protobuf", "grpc-rs"]
repository = "https://github.com/mtp401/protoc-grpcio"
documentation = "https://docs.rs/protoc-grpcio"
description = """
API for programatically invoking the grpcio (grpc-rs) gRPC compiler
"""

[badges]
maintenance = { status = "actively-developed" }
travis-ci = { repository = "mtp401/protoc-grpcio" }

[dependencies]
grpcio-compiler = "0.7"
failure = "0.1"
tempfile = "3.1"
protobuf = "2.18"
protobuf-codegen = "2.18"
protoc = "2.18"
