[package]
name = "protoc-grpcio"
version = "3.0.0"
authors = ["Matt Pelland <matt@pelland.io>"]
license = "Apache-2.0"
keywords = ["compiler", "grpc", "protobuf", "grpc-rs"]
repository = "https://github.com/mtp401/protoc-grpcio"
documentation = "https://docs.rs/protoc-grpcio"
description = """
API for programatically invoking the grpcio (grpc-rs) gRPC compiler
"""
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }
travis-ci = { repository = "mtp401/protoc-grpcio" }

[dependencies]
grpcio-compiler = "0.9"
tempfile = "3.2"
thiserror = "1.0"
protobuf = "2.24"
protobuf-codegen = "2.24"
protoc = "2.24"
