[package]
name = "example"
version = "0.0.1"
authors = ["John Doe <john.doe@example.com>"]

[lib]
name = "protos"
path = "src/protos/mod.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
futures = "0.1.16"
grpcio = "0.2.0"
protobuf = "1.4.1"

[build-dependencies]
protoc-grpcio = { path = ".." }
