[package]
name = "example"
version = "0.0.1"
authors = ["John Doe <john.doe@example.com>"]
publish = false

[lib]
name = "protos"
path = "src/protos/mod.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
futures = "0.3.5"
grpcio = "0.6.0"
protobuf = "~2"

[build-dependencies]
protoc-grpcio = { path = ".." }
